--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collaborative newsroom documentation site, powered by Google Docs.",
   "main": "server/index.js",
   "dependencies": {
-    "@google-cloud/datastore": "^5.1.0",
+    "@google-cloud/datastore": "^9.2.1",
     "cache-manager": "^3.3.0",
     "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
@@ -14,19 +14,20 @@
     "express-promise-router": "^4.0.1",
     "express-session": "^1.17.1",
     "google-auth-library": "^6.1.6",
-    "googleapis": "^48.0.0",
+    "googleapis": "^148.0.0",
+    "helmet": "^8.1.0",
     "helmet-csp": "^3.1.0",
     "highlight.js": "^10.4.1",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.27",
     "moment": "^2.29.4",
-    "passport": "^0.4.1",
+    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-slack-oauth2": "^1.0.2",
     "pretty": "^2.0.0",
     "promise-inflight": "^1.0.1",
-    "sass": "^1.63.4",
+    "sass": "^1.86.3",
     "slugify": "^1.4.5",
     "unescape": "^1.0.1",
     "winston": "^2.4.5",
@@ -41,9 +42,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
     "nock": "^13.0.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.9",
     "nyc": "^15.1.0",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
